# HANSO-Lab

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
Source/: JuceHeader.h
Source/Analysis/: AnalysisEngine.cpp  AnalysisEngine.h  CabinetMicMatrixEstimator.cpp  CabinetMicMatrixEstimator.h  CabinetToneProfiler.cpp  CabinetToneProfiler.h  CalibrationValidator.cpp  CalibrationValidator.h  CaptureQualityAnalyzer.cpp  CaptureQualityAnalyzer.h  CaptureQualityReport.h  DynamicResponseAnalyzer.cpp  DynamicResponseAnalyzer.h  FrequencyResponseAnalyzer.cpp  FrequencyResponseAnalyzer.h  MicColorationProfiles.cpp  MicColorationProfiles.h  ModelExtractionEngine.cpp  ModelExtractionEngine.h  ModelFidelityEvaluator.cpp  ModelFidelityEvaluator.h  ResidualDatasetBuilder.cpp  ResidualDatasetBuilder.h  SpectrumUtils.h  TransferCurveAnalyzer.cpp  TransferCurveAnalyzer.h
Source/App/: ApplicationState.cpp  ApplicationState.h  LabWorkflow.cpp  LabWorkflow.h  Main.cpp  MainComponent.cpp  MainComponent.h  Utf8.h
Source/Audio/: AudioDeviceController.cpp  AudioDeviceController.h  AudioEngine.cpp  AudioEngine.h  AudioMetrics.h  CaptureAudioSource.cpp  CaptureAudioSource.h  InputChannelLayout.h  PreviewCabinetIrProcessor.cpp  PreviewCabinetIrProcessor.h  PreviewCabinetProcessor.cpp  PreviewCabinetProcessor.h  PreviewMicColorProcessor.cpp  PreviewMicColorProcessor.h  PreviewMicDistanceProcessor.cpp  PreviewMicDistanceProcessor.h  PreviewModelProcessor.cpp  PreviewModelProcessor.h
Source/Capture/: CabinetCaptureState.h  CabinetIrExtractor.cpp  CabinetIrExtractor.h  CabinetIrImporter.cpp  CabinetIrImporter.h  CabinetMessages.h  CabinetMicPositions.h  CaptureEngine.cpp  CaptureEngine.h  CaptureMode.h  CaptureRecipe.cpp  CaptureRecipe.h  CaptureSession.cpp  CaptureSession.h  CaptureStep.h  CaptureStepUtils.h  CaptureType.h  CaptureWizardState.cpp  CaptureWizardState.h  EasyCaptureSafetyPolicy.cpp  EasyCaptureSafetyPolicy.h  OutputRoutingPolicy.cpp  OutputRoutingPolicy.h  SignalAlignment.cpp  SignalAlignment.h  TestSignalGenerator.cpp  TestSignalGenerator.h
Source/Model/: AnalysisSummary.h  CabinetToneProfile.h  CaptureMetadata.h  CaptureSettings.h  CircuitProfile.h  CompactHansoModel.h  DynamicProfile.h  HansoCategory.h  HansoPackage.cpp  HansoPackage.h  MicColoration.h  ResidualDatasetInfo.h  ResidualModelInfo.h
Source/Preview/: PreviewChainPolicy.h  PreviewSampleLibrary.cpp  PreviewSampleLibrary.h
Source/Serialization/: DistributionExport.cpp  DistributionExport.h  HansoAudioChunkCodec.cpp  HansoAudioChunkCodec.h  HansoModelCodec.cpp  HansoModelCodec.h  HansoSerializer.cpp  HansoSerializer.h
Source/Tests/: TestsMain.cpp
Source/Tools/: CabinetPackageCli.cpp
Source/UI/: AnalysisPanel.cpp  AnalysisPanel.h  AssetPanel.cpp  AssetPanel.h  AudioSettingsPanel.cpp  AudioSettingsPanel.h  CaptureInputControls.cpp  CaptureInputControls.h  CapturePanel.cpp  CapturePanel.h  CaptureStatusIcon.cpp  CaptureStatusIcon.h  HansoLookAndFeel.h  LabPanel.h  LevelMeter.cpp  LevelMeter.h  LogPanel.cpp  LogPanel.h  OnboardingPanel.cpp  OnboardingPanel.h  PreviewChainStrip.cpp  PreviewChainStrip.h  PreviewWaveformComponent.cpp  PreviewWaveformComponent.h  TonePreviewPanel.cpp  TonePreviewPanel.h
docs/: CABINET_PROBE_C1.md  CAPTURE_CONNECTION_POLICY.md  CURSOR_FIXES.md  HANDOFF.md  HANSO_CONTAINER_REFERENCE.md  HANSO_PROBE_A1.md  TONEX_REFERENCE_NOTES.md  UX_IMPROVEMENT_PLAN.md
